--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 	  
 		  <!-- Wrapper for slides -->
 		  <div class="carousel-inner">
-			<div class="item first-slide active">
+			<div class="item first-slide ">
 			 	 <img src="https://i.ytimg.com/vi/K2KKgtYZHFE/maxresdefault.jpg" alt="Los Angeles" style="width:100%;">
 			</div>
 	  
@@ -31,7 +31,7 @@
 			  	<img src="https://i.ytimg.com/vi/Z0A93TcORrc/maxresdefault.jpg" alt="Chicago" style="width:100%;">
 			</div>
 		  
-			<div class="item third-slide">
+			<div class="item third-slide active">
 			  	<img src="https://i.ytimg.com/vi/Zbbs_xmdNs4/maxresdefault.jpg" alt="New york" style="width:100%;">
 			</div>
 
